--- a/styles.css
+++ b/styles.css
@@ -1,17 +1,25 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+@font-face {font-family: italic; src: url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;1,100;1,300&display=swap');
+}
 body {
     height: 100vh;
     display: flex;
     flex-direction: column;
-    
     margin: 0;
+    font-family: 'Roboto', sans-serif;
 }
 
 .header {
     background-color: #1F2937;
     display: flex;
-    justify-content: space-around;
-    align-items: center;
     
+    flex-direction: column;
+    
+}
+.navigation {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
 }
 
 .logo {
@@ -34,16 +42,17 @@ li {
 .main {
     background-color: #1F2937;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-evenly;
     align-items: center;
-    padding: 56px;
-    gap: 40px;
+    padding: 50px;
+   
 }
 
 .container-left {
     display: flex;
-    flex-direction: column;
-    flex: 1;
+   flex-wrap: wrap;
+   gap:8px;
+    max-width: 400px;
     
     
 }
@@ -64,7 +73,7 @@ li {
 
 .container-right {
     display: flex;
-    flex: 1;
+    
 }
 
 .information {
@@ -78,7 +87,8 @@ li {
     font-size: 36px;
     font-weight: bold;
     color:#1F2937;
-    padding: 24px;
+    padding: 24px 24px 40px 24px;
+    
 }
 
 .squares-container {
@@ -86,11 +96,13 @@ li {
 }
 
 .square-placeholder {
-    width: 100px;
-    height: 100px;
+    width: 140px;
+    height: 140px;
     border: 1px;
     border-color: #3882F6;
     border-style: solid;
+    border-width: 3px;
+    border-radius: 14px;
 
 }
 
@@ -105,22 +117,27 @@ li {
 
 .quote-container {
     background-color: #E5E7EB;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    padding: 100px;
+    
+    padding: 100px 150px 100px 150px;
 }
 
+
+
+
 .quote-text {
-    font-size: 36px;
+    font-size: 26px;
     color: #1F2937;
+    font-family: italic;  
    
+   
+  
 }
 
 .author {
-    align-self: flex-end;
-    font-size: 26px;
+    text-align: end;
+    font-size: 20px;
     font-weight: bold;
+    font-family: italic;  
 }
 
 .call-to-action {
@@ -132,9 +149,11 @@ li {
 .call-container {
     display: flex;
     background-color: #3882F6;
+    border-radius: 14px;
     padding:30px 80px 30px 80px;
     align-items: center;
     gap: 100px;
+    color: #F9FAF8;
 }
 
 #callbutton {
@@ -154,15 +173,21 @@ li {
 
 button {
     background-color: #3882F6;
-    padding:5px 12px;
+    padding:5px 20px 5px 20px;
     border: none;
+    border-radius:8px;
+    color: #F9FAF8;
+    font-size: 16px;
+    font-weight: bolder;
     
 }
 
 .image-placeholder{
 
 background-color: grey;
-padding: 80px;    
+width: 350px;
+height: 200px;
+text-align: center;    
 }
 
 
